internal/cmd/egctl/testdata/translate/out/multiple-xds.route.json
{
  "xds": {
    "default/eg": {
      "@type": "type.googleapis.com/envoy.admin.v3.RoutesConfigDump",
      "dynamicRouteConfigs": [
        {
          "routeConfig": {
            "@type": "type.googleapis.com/envoy.config.route.v3.RouteConfiguration",
            "ignorePortInHostMatching": true,
            "name": "default/eg/http",
            "virtualHosts": [
              {
                "domains": [
                  "www.example.com"
                ],
                "name": "default/eg/http/www_example_com",
                "routes": [
                  {
                    "match": {
                      "prefix": "/"
                    },
                    "name": "httproute/default/backend/rule/0/match/0/www_example_com",
                    "route": {
                      "cluster": "httproute/default/backend/rule/0"
                    }
                  }
                ]
              }
            ]
          }
        }
      ]
    },
    "default/eg2": {
      "@type": "type.googleapis.com/envoy.admin.v3.RoutesConfigDump",
      "dynamicRouteConfigs": [
        {
          "routeConfig": {
            "@type": "type.googleapis.com/envoy.config.route.v3.RouteConfiguration",
            "ignorePortInHostMatching": true,
            "name": "default/eg2/http",
            "virtualHosts": [
              {
                "domains": [
                  "www.example2.com"
                ],
                "name": "default/eg2/http/www_example2_com",
                "routes": [
                  {
                    "match": {
                      "pathSeparatedPrefix": "/v2"
                    },
                    "name": "httproute/default/backend/rule/0/match/0/www_example2_com",
                    "route": {
                      "cluster": "httproute/default/backend/rule/0"
                    }
                  }
                ]
              }
            ]
          }
        }
      ]
    }
  }
}
